--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,8 +19,8 @@
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^6.26.0",
-
     "vite": ">=5.4.6"
   },
   "devDependencies": {
@@ -36,7 +36,6 @@
     "globals": "^15.9.0",
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.9",
-    
     "vite": ">=5.4.6"
   }
 }
